--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-logger": "^1.1.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
   },
