--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.5.0",
-    "babel-loader": "^8.0.6",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -47,6 +46,11 @@
   },
   "homepage": "https://github.com/kevk22/SeedFunding#readme",
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.5.0"
+    "@babel/plugin-transform-runtime": "^7.5.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1"
   }
 }
