--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch --mode=development",
+    "start": "webpack --mode=production",
+    "webpack": "webpack --watch --mode=development",
     "postinstall": "webpack --mode=development"
   },
   "engines": {
