--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/runtime": "^7.5.0",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
+    "react-datepicker": "^2.8.0",
     "react-dom": "^16.8.6",
     "react-logger": "^1.1.0",
     "react-redux": "^7.1.0",
